# libModule

./: .gitignore  CMakeLists.txt  README.md
include/: my_library.h
src/: my_library.cpp
test/: CMakeLists.txt  test_my_library.cpp
